Fix embeded svg under dark mode

--- a/bun/uts-style.css
+++ b/bun/uts-style.css
@@ -918,6 +918,10 @@ code.highlight.grace-loading {
         filter: invert(0.85);
     }
 
+    img[src$=".svg"] {
+        filter: invert(0.85);
+    }
+
     span.newvocab {
         filter: invert(100%) !important;
         /* filter: brightness(800%) !important; */
